--- a/test/style.css
+++ b/test/style.css
@@ -1,6 +1,31 @@
-.canvas {
+.box {
+     float: left;
+     width: 30%;
+     margin-right: 3.33333%;
+     padding: 20px;
+     background: #eee;
+     box-sizing: border-box;
+}
+
+
+.canvas1 {
+  display: block;
   position: absolute;
   float: left;
+  width: 30%;
+  height: 70%
+  margin-right: 3.33333%;
+  padding: 20px;
+  background: #eee;
+  box-sizing: border-box;
+}
+
+
+
+.canvas2 {
+  display: block;
+  position: absolute;
+  float: right;
   width: 30%;
   height: 70%
   margin-right: 3.33333%;
