--- a/test/style.css
+++ b/test/style.css
@@ -1,4 +1,6 @@
 .box {
+    display:inline-block;
+    position:relative;
      float: left;
      width: 30%;
      margin-right: 3.33333%;
@@ -7,29 +9,23 @@
      box-sizing: border-box;
 }
 
-
-.canvas1 {
-  display: block;
-  position: absolute;
-  float: left;
-  width: 30%;
-  height: 70%
-  margin-right: 3.33333%;
-  padding: 20px;
-  background: #eee;
-  box-sizing: border-box;
+#categories{
+display:inline-block;
+position:relative;
+   float: left;
+   width: 30%;
+   margin-right: 3.33333%;
+   padding: 20px;
+   background: #eee;
+   box-sizing: border-box;
 }
 
-
-
-.canvas2 {
-  display: block;
-  position: absolute;
-  float: right;
-  width: 30%;
-  height: 70%
-  margin-right: 3.33333%;
-  padding: 20px;
-  background: #eee;
-  box-sizing: border-box;
+#produkte{
+position:absolute;
+   float: left;
+   width: 30%;
+   margin-right: 3.33333%;
+   padding: 20px;
+   background: #eee;
+   box-sizing: border-box;
 }
